adding an application action

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,9 @@
     <script src="https://kit.fontawesome.com/f99c5d740e.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="message">
+        
+    </div>
     <main>
         <section class="function-menu">
             <div class="adding-selected-school-subjects">
@@ -19,23 +22,28 @@
             </div>
             <section class="content">
                 <div class="table">
-                    <div class="name-of-the-school-subject">
+                    <!-- <div class="name-of-the-school-subject">
                         <h3>Matematyka</h3>
                         <div class="button-container">
                             <button class="edit-name">
                                 <span class="fas fa-pencil-alt"></span>
                             </button>
                             <button class="removing-a-school-subject">
-                                x
+                                <span class="far fa-trash-alt"></span>
                             </button>
                         </div>
                     </div>
-                    <!-- <div class="rating-and-weight">
+                    <div class="rating-and-weight">
                         <input type="number" class="school-grade-value" placeholder="Ocena">
                         <input type="number" class="weight-of-the-rating-value" placeholder="Waga"> 
-                        <button class="adding"></button>
-                    </div> -->
+                    </div>
                     <button class="adding-btn">+</button>
+                    <div class="school-grade">
+                        <h4 class="school-grade-value">3</h4>
+                        <button class="removing-school-grades">x</button>
+                        <h4 class="weight-school-grade-value">waga 2</h4>
+
+                    </div> -->
                 </div>
             </section>
             <section class="menu-bottom-content">
