adding school grades

--- a/index.html
+++ b/index.html
@@ -9,20 +9,46 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <script src="https://kit.fontawesome.com/f99c5d740e.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/f99c5d740e.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
     <div class="message">
         
     </div>
+    <!-- <div class="choice-of-school-subjects-container">
+        <div class="choice-of-school-subjects">
+            <h2>Wybierz interesujące cię przedmioty</h2>
+            <div class="selection-list">
+                <div class="selection-list-elements">
+                    <label>Biologia</label>
+                    <input type="checkbox" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Chemia</label>
+                    <input type="checkbox" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>EDB</label>
+                    <input type="checkbox" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Etyka</label>
+                    <input type="checkbox" class="selection-list-checkbox">
+                </div>
+            </div>
+        </div>
+    </div> -->
     <main>
         <section class="function-menu">
-            <div class="adding-selected-school-subjects">
-                <button class="adding-selected-school-subjects-btn">Wybierz przedmioty</button>
+            <div class="adding-selected-school-subjects-content">
+                <div class="adding-selected-school-subjects">
+                    <button class="adding-selected-school-subjects-btn">Wybierz przedmioty</button>
+                </div>
             </div>
+
             <section class="content">
-                <div class="table">
-                    <!-- <div class="name-of-the-school-subject">
+                <!-- <div class="table">
+                    <div class="name-of-the-school-subject">
                         <h3>Matematyka</h3>
                         <div class="button-container">
                             <button class="edit-name">
@@ -43,8 +69,8 @@
                         <button class="removing-school-grades">x</button>
                         <h4 class="weight-school-grade-value">waga 2</h4>
 
-                    </div> -->
-                </div>
+                    </div>
+                </div> -->
             </section>
             <section class="menu-bottom-content">
                 <div class="adding-school-subjects">
