improvement of DOM structure generation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <!-- <script src="https://kit.fontawesome.com/f99c5d740e.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/f99c5d740e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="message">
