adding mean counting

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                         <input type="number" class="weight-of-the-rating-value" placeholder="Waga"> 
                     </div>
                     <button class="adding-btn">+</button>
+                    <div class="counting-result">
+                        <span class="counting-result-span">Średnia</span>
+                        <span class="counting-result-value">3,34</span>
+                    </div>
+
                     <div class="school-grade">
                         <h4 class="school-grade-value">3</h4>
                         <button class="removing-school-grades">x</button>
