adding removal of school items

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <div class="message">
         
     </div>
+    <div class="notification">
+        <div class="notification-container">
+            <h2>Usuwanie przedmiotu szkolnego</h2>
+            <p class="notification-text"></p>
+            <div class="btn-container">
+                <button class="cancel btn-container-style">Anuluj</button>
+                <button class="remove btn-container-style">Usuń</button>
+            </div>
+        </div>
+    </div>
     <!-- <div class="choice-of-school-subjects-container">
         <div class="choice-of-school-subjects">
             <h2>Wybierz interesujące cię przedmioty</h2>
@@ -88,9 +98,7 @@
                     <div class="average-of-all-subjects-text">
                         <p>Średnia wszystkich przedmiotów</p>
                     </div>
-                    <div class="average-of-all-subjects-result">
-                        3,50
-                    </div>
+                    <div class="average-of-all-subjects-result"></div>
                 </div>
             </section>
         </section>
