adding edition of the name of school subjects

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             </div>
         </div>
     </div>
+    <div class="changing-the-name-of-school-subjects">
+        <div class="changing-the-name-of-school-subjects-container">
+            <h2>Zmiana nazwy przedmiotu szkolnego</h2>
+            <p class="changing-name-school-subjects-text"></p>
+            <div class="changing-button-container">
+                <input type="text" class="changing-name-input" placeholder="Podaj nową nazwę">
+                <button class="changing-name-change">Zmień</button>
+                <button class="changing-name-cancel">Anuluj</button>
+            </div>
+            <p class="changing-name-school-subjects-error"></p>
+        </div>
+    </div>
     <!-- <div class="choice-of-school-subjects-container">
         <div class="choice-of-school-subjects">
             <h2>Wybierz interesujące cię przedmioty</h2>
@@ -98,7 +110,7 @@
                     <div class="average-of-all-subjects-text">
                         <p>Średnia wszystkich przedmiotów</p>
                     </div>
-                    <div class="average-of-all-subjects-result"></div>
+                    <div class="average-of-all-subjects-result">0</div>
                 </div>
             </section>
         </section>
