adding items from the list

--- a/index.html
+++ b/index.html
@@ -37,29 +37,53 @@
             <p class="changing-name-school-subjects-error"></p>
         </div>
     </div>
-    <!-- <div class="choice-of-school-subjects-container">
+    <div class="choice-of-school-subjects-container">
         <div class="choice-of-school-subjects">
             <h2>Wybierz interesujące cię przedmioty</h2>
             <div class="selection-list">
                 <div class="selection-list-elements">
                     <label>Biologia</label>
-                    <input type="checkbox" class="selection-list-checkbox">
+                    <input type="checkbox" data-nameschool="Biologia" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
                     <label>Chemia</label>
-                    <input type="checkbox" class="selection-list-checkbox">
+                    <input type="checkbox" data-nameschool="Chemia" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
                     <label>EDB</label>
-                    <input type="checkbox" class="selection-list-checkbox">
+                    <input type="checkbox" data-nameschool="EDB" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
                     <label>Etyka</label>
-                    <input type="checkbox" class="selection-list-checkbox">
+                    <input type="checkbox" data-nameschool="Etyka" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Fizyka</label>
+                    <input type="checkbox" data-nameschool="Fizyka" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Geografia</label>
+                    <input type="checkbox" data-nameschool="Geografia" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Historia</label>
+                    <input type="checkbox" data-nameschool="Historia" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Język angielski</label>
+                    <input type="checkbox" data-nameschool="Język angielski" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Język niemiecki</label>
+                    <input type="checkbox" data-nameschool="Język niemiecki" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-btn-container">
+                    <button class="selection-list-btn-cancel selection-list-btn">Anuluj</button>
+                    <button class="selection-list-btn-add selection-list-btn">Dodaj wybrane</button>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <main>
         <section class="function-menu">
             <div class="adding-selected-school-subjects-content">
