Improving script responsiveness and pervormance

--- a/index.html
+++ b/index.html
@@ -77,6 +77,38 @@
                     <label>Język niemiecki</label>
                     <input type="checkbox" data-nameschool="Język niemiecki" class="selection-list-checkbox">
                 </div>
+                <div class="selection-list-elements">
+                    <label>Język polski</label>
+                    <input type="checkbox" data-nameschool="Język polski" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Matematyka</label>
+                    <input type="checkbox" data-nameschool="Matematyka" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Muzyka</label>
+                    <input type="checkbox" data-nameschool="Muzyka" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Plastyka</label>
+                    <input type="checkbox" data-nameschool="Plastyka" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Religia</label>
+                    <input type="checkbox" data-nameschool="Religia" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Wiedza o społeczeństwie</label>
+                    <input type="checkbox" data-nameschool="Wiedza o społeczeństwie" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>WDŻ</label>
+                    <input type="checkbox" data-nameschool="WDŻ" class="selection-list-checkbox">
+                </div>
+                <div class="selection-list-elements">
+                    <label>Wychowanie fizyczne</label>
+                    <input type="checkbox" data-nameschool="Wychowanie fizyczne" class="selection-list-checkbox">
+                </div>
                 <div class="selection-list-btn-container">
                     <button class="selection-list-btn-cancel selection-list-btn">Anuluj</button>
                     <button class="selection-list-btn-add selection-list-btn">Dodaj wybrane</button>
@@ -88,40 +120,11 @@
         <section class="function-menu">
             <div class="adding-selected-school-subjects-content">
                 <div class="adding-selected-school-subjects">
-                    <button class="adding-selected-school-subjects-btn">Wybierz przedmioty</button>
+                    <button class="adding-selected-school-subjects-btn">Wybierz przedmioty z listy</button>
                 </div>
             </div>
-
             <section class="content">
-                <!-- <div class="table">
-                    <div class="name-of-the-school-subject">
-                        <h3>Matematyka</h3>
-                        <div class="button-container">
-                            <button class="edit-name">
-                                <span class="fas fa-pencil-alt"></span>
-                            </button>
-                            <button class="removing-a-school-subject">
-                                <span class="far fa-trash-alt"></span>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="rating-and-weight">
-                        <input type="number" class="school-grade-value" placeholder="Ocena">
-                        <input type="number" class="weight-of-the-rating-value" placeholder="Waga"> 
-                    </div>
-                    <button class="adding-btn">+</button>
-                    <div class="counting-result">
-                        <span class="counting-result-span">Średnia</span>
-                        <span class="counting-result-value">3,34</span>
-                    </div>
 
-                    <div class="school-grade">
-                        <h4 class="school-grade-value">3</h4>
-                        <button class="removing-school-grades">x</button>
-                        <h4 class="weight-school-grade-value">waga 2</h4>
-
-                    </div>
-                </div> -->
             </section>
             <section class="menu-bottom-content">
                 <div class="adding-school-subjects">
@@ -138,8 +141,11 @@
                 </div>
             </section>
         </section>
+        <section class="analysis-number-grades-container">
+            <div class="analysis-number-grades"></div>
+        </section>
     </main>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
