creating a counting of school grades

--- a/index.html
+++ b/index.html
@@ -178,47 +178,47 @@
                     <span class="analysis-grade-number">1</span>
                 </div>
                 <span class="analysis-grade-quantity" >ilość ocen</span>
-                <span class="analysis-grade-value" style="color: #D44242;">0</span>
+                <span class="analysis-grade-value" style="color: #D44242;" data-gradevalue="1">0</span>
             </div>
             <div class="analysis-number-grades">
                 <div class="analysis-container" style="background-color: #7F5CB4;">
                     <span class="analysis-grade-text">ocena</span>
-                    <span class="analysis-grade-number">1</span>
+                    <span class="analysis-grade-number">2</span>
                 </div>
                 <span class="analysis-grade-quantity">ilość ocen</span>
-                <span class="analysis-grade-value" style="color: #7F5CB4;">0</span>
+                <span class="analysis-grade-value" style="color: #7F5CB4;" data-gradevalue="2">0</span>
             </div>
             <div class="analysis-number-grades">
                 <div class="analysis-container" style="background-color: #E8B200;">
                     <span class="analysis-grade-text">ocena</span>
-                    <span class="analysis-grade-number">1</span>
+                    <span class="analysis-grade-number">3</span>
                 </div>
                 <span class="analysis-grade-quantity">ilość ocen</span>
-                <span class="analysis-grade-value" style="color: #E8B200;">0</span>
+                <span class="analysis-grade-value" style="color: #E8B200;" data-gradevalue="3">0</span>
             </div>
             <div class="analysis-number-grades">
                 <div class="analysis-container" style="background-color: #00A1E8;">
                     <span class="analysis-grade-text">ocena</span>
-                    <span class="analysis-grade-number">1</span>
+                    <span class="analysis-grade-number">4</span>
                 </div>
                 <span class="analysis-grade-quantity">ilość ocen</span>
-                <span class="analysis-grade-value" style="color: #00A1E8;">0</span>
+                <span class="analysis-grade-value" style="color: #00A1E8;" data-gradevalue="4">0</span>
             </div>
             <div class="analysis-number-grades">
                 <div class="analysis-container" style="background-color: #6BAB4C;">
                     <span class="analysis-grade-text">ocena</span>
-                    <span class="analysis-grade-number">1</span>
+                    <span class="analysis-grade-number">5</span>
                 </div>
                 <span class="analysis-grade-quantity">ilość ocen</span>
-                <span class="analysis-grade-value" style="color: #6BAB4C;">0</span>
+                <span class="analysis-grade-value" style="color: #6BAB4C;" data-gradevalue="5">0</span>
             </div>
             <div class="analysis-number-grades">
                 <div class="analysis-container" style="background-color: #16D900;">
                     <span class="analysis-grade-text">ocena</span>
-                    <span class="analysis-grade-number">1</span>
+                    <span class="analysis-grade-number">6</span>
                 </div>
                 <span class="analysis-grade-quantity">ilość ocen</span>
-                <span class="analysis-grade-value" style="color: #16D900;">0</span>
+                <span class="analysis-grade-value" style="color: #16D900;" data-gradevalue="6">0</span>
             </div>
         </section>
     </main>
