improving the naming of school subjects

--- a/index.html
+++ b/index.html
@@ -44,100 +44,100 @@
             <h2>Wybierz interesujące cię przedmioty</h2>
             <div class="selection-list">
                 <div class="selection-list-elements">
-                    <label>Biologia</label>
-                    <input type="checkbox" data-nameschool="Biologia" class="selection-list-checkbox">
+                    <label>biologia</label>
+                    <input type="checkbox" data-nameschool="biologia" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Chemia</label>
-                    <input type="checkbox" data-nameschool="Chemia" class="selection-list-checkbox">
+                    <label>chemia</label>
+                    <input type="checkbox" data-nameschool="chemia" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>EDB</label>
-                    <input type="checkbox" data-nameschool="EDB" class="selection-list-checkbox">
+                    <label>edb</label>
+                    <input type="checkbox" data-nameschool="edb" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Etyka</label>
-                    <input type="checkbox" data-nameschool="Etyka" class="selection-list-checkbox">
+                    <label>etyka</label>
+                    <input type="checkbox" data-nameschool="etyka" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Fizyka</label>
-                    <input type="checkbox" data-nameschool="Fizyka" class="selection-list-checkbox">
+                    <label>fizyka</label>
+                    <input type="checkbox" data-nameschool="fizyka" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Geografia</label>
-                    <input type="checkbox" data-nameschool="Geografia" class="selection-list-checkbox">
+                    <label>geografia</label>
+                    <input type="checkbox" data-nameschool="geografia" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Historia</label>
-                    <input type="checkbox" data-nameschool="Historia" class="selection-list-checkbox">
+                    <label>historia</label>
+                    <input type="checkbox" data-nameschool="historia" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Język angielski</label>
-                    <input type="checkbox" data-nameschool="Język angielski" class="selection-list-checkbox">
+                    <label>język angielski</label>
+                    <input type="checkbox" data-nameschool="język angielski" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Język niemiecki</label>
-                    <input type="checkbox" data-nameschool="Język niemiecki" class="selection-list-checkbox">
+                    <label>język niemiecki</label>
+                    <input type="checkbox" data-nameschool="język niemiecki" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Język polski</label>
-                    <input type="checkbox" data-nameschool="Język polski" class="selection-list-checkbox">
+                    <label>język polski</label>
+                    <input type="checkbox" data-nameschool="język polski" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Matematyka</label>
-                    <input type="checkbox" data-nameschool="Matematyka" class="selection-list-checkbox">
+                    <label>matematyka</label>
+                    <input type="checkbox" data-nameschool="matematyka" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Muzyka</label>
-                    <input type="checkbox" data-nameschool="Muzyka" class="selection-list-checkbox">
+                    <label>muzyka</label>
+                    <input type="checkbox" data-nameschool="muzyka" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Plastyka</label>
-                    <input type="checkbox" data-nameschool="Plastyka" class="selection-list-checkbox">
+                    <label>plastyka</label>
+                    <input type="checkbox" data-nameschool="plastyka" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Religia</label>
-                    <input type="checkbox" data-nameschool="Religia" class="selection-list-checkbox">
+                    <label>religia</label>
+                    <input type="checkbox" data-nameschool="religia" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Wiedza o społeczeństwie</label>
-                    <input type="checkbox" data-nameschool="Wiedza o społeczeństwie" class="selection-list-checkbox">
+                    <label>wiedza o społeczeństwie</label>
+                    <input type="checkbox" data-nameschool="wiedza o społeczeństwie" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>WDŻ</label>
-                    <input type="checkbox" data-nameschool="WDŻ" class="selection-list-checkbox">
+                    <label>wdź</label>
+                    <input type="checkbox" data-nameschool="wdż" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Wychowanie fizyczne</label>
-                    <input type="checkbox" data-nameschool="Wychowanie fizyczne" class="selection-list-checkbox">
+                    <label>wychowanie fizyczne</label>
+                    <input type="checkbox" data-nameschool="wychowanie fizyczne" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Gimnastyka</label>
-                    <input type="checkbox" data-nameschool="Gimnastyka" class="selection-list-checkbox">
+                    <label>gimnastyka</label>
+                    <input type="checkbox" data-nameschool="gimnastyka" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Język francuski</label>
-                    <input type="checkbox" data-nameschool="Język francuski" class="selection-list-checkbox">
+                    <label>język francuski</label>
+                    <input type="checkbox" data-nameschool="język francuski" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Język rosyjski</label>
-                    <input type="checkbox" data-nameschool="Język rosyjski" class="selection-list-checkbox">
+                    <label>język rosyjski</label>
+                    <input type="checkbox" data-nameschool="język rosyjski" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Język hiszpański</label>
-                    <input type="checkbox" data-nameschool="Język hiszpański" class="selection-list-checkbox">
+                    <label>język hiszpański</label>
+                    <input type="checkbox" data-nameschool="język hiszpański" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Technika</label>
-                    <input type="checkbox" data-nameschool="Technika" class="selection-list-checkbox">
+                    <label>technika</label>
+                    <input type="checkbox" data-nameschool="technika" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Wychowanie do życia w rodzinie</label>
-                    <input type="checkbox" data-nameschool="Wychowanie do życia w rodzinie" class="selection-list-checkbox">
+                    <label>wychowanie do życia w rodzinie</label>
+                    <input type="checkbox" data-nameschool="wychowanie do życia w rodzinie" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-elements">
-                    <label>Informatyka</label>
-                    <input type="checkbox" data-nameschool="Informatyka" class="selection-list-checkbox">
+                    <label>informatyka</label>
+                    <input type="checkbox" data-nameschool="informatyka" class="selection-list-checkbox">
                 </div>
                 <div class="selection-list-btn-container">
                     <button class="selection-list-btn-cancel selection-list-btn">Anuluj</button>
